--- a/quiz.css
+++ b/quiz.css
@@ -7,23 +7,37 @@ body {
     border: solid black;
     text-align: center;
     align-items: center;
+    max-width: 1000px;
 }
 
 #question table {
     color: black;
-    width: 100%
+    width: 100%;
+    table-layout: fixed;
 }
 
 #question table td {
     max-width: 100%;
-    /* padding: 5%; */
+    padding: 2%;
 }
 
 #question table div {
-    padding: 10%;
+    padding: 8%;
     border: solid darkred;
     background-color: red;
     color: lightyellow;
     border-radius: 30%;
     font-size: 130%;
+    min-height: 80%;
+    max-height: 100%;
+    cursor: pointer;
+}
+
+#question p {
+    font-size: 130%;
+}
+
+#reload {
+    zoom: 3;
+    cursor: pointer;
 }
