--- a/quiz.css
+++ b/quiz.css
@@ -8,33 +8,33 @@ body {
     text-align: center;
     align-items: center;
     max-width: 1000px;
+    font-size: 130%;
 }
 
-#question table {
+#question table.question {
     color: black;
     width: 100%;
     table-layout: fixed;
 }
 
-#question table td {
+#question table.question td {
     max-width: 100%;
     padding: 2%;
 }
 
-#question table div {
+#question table.question div {
     padding: 8%;
     border: solid darkred;
     background-color: red;
     color: lightyellow;
     border-radius: 30%;
-    font-size: 130%;
     min-height: 80%;
     max-height: 100%;
     cursor: pointer;
 }
 
-#question p {
-    font-size: 130%;
+.footer td {
+    vertical-align: bottom;
 }
 
 #reload {
