--- a/quiz.css
+++ b/quiz.css
@@ -1,19 +1,14 @@
 body {
-    background-image: radial-gradient(yellow,red, darkred);
+    background-color: red;
 }
 
 #question {
-    background-color: rgba(255, 68, 0, 0.7);
+    background-color: lightcoral;
     border: solid black;
     text-align: center;
     align-items: center;
     max-width: 1000px;
     font-size: 130%;
-
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 #question table.question {
